      registerClass is capable of registering icons.

    - DublinCore and PortalFolder: Changed fallback in 'Type' method.
      The fallback is only necessary if the related type info is missing.

    - CMFCore.PortalContent: Wrong variable name in __call__ would blow up
      if no default view could be found for a piece of content.

  Others

    - Remove all "old-style" actions from tools that still carried them 
      (CMFDefault.MembershipTool, CMFDefault.PropertiesTool, 
      CMFDefault.RegistrationTool, CMFDefault.SyndicationTool,
      CMFDefault.DiscussionTool, CMFCore.UndoTool). These have been
      superceded by "new-style" action information objects stored inside
      the Actions Tool.

    - Some simplifications to the slurp_release release helper script and
      updates to the RELEASE.txt release instructions.

    - The CMF now depends on Zope 2.8.1 including Five.

    - Non-release packages moved out of the /CMF/ repository package:

      o hotfixes moved to /CMF_Hotfixes

      o others (CMFCollector, CMFStaging, CMFTracker, CMFWorkspaces)
        moved to /CMF_Extras/

    - To document how to create a CMF release from CMF a description is now
      included in RELEASE.txt at the root of the CMF package. This text can
      guide release managers or volunteers with the appropriate release
      privileges.

    - Added DeprecationWarning to the all_cmf_tests.py script. The canonical
      way to run the tests is using "zopectl test".
      (http://www.zope.org/Collectors/CMF/272)

    - CMFDefault: Oldstyle DefaultWorkflowDefinition is no longer registered.
      So you can't accidentally add this deprecated workflow.

    - The "Access future portal content" was not used anywhere and has been
      removed. (http://www.zope.org/Collectors/CMF/240)

    - CMFDefault: Marked 'manage_addCMFSite' as deprecated.
      To add a new CMF site, select 'Configured CMF Site'. The 'CMFDefault